@@ -1,0 +1,5 @@
++------------------------- Test Application X1802 ---------------------------+
+|                                                                            |
+        This is a test of the 1802's generic branch instructions             |
+|                                                                            |
++----------------------------------------------------------------------------+
